# incident-response-openenv

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FUTURE_WORK.md  LICENSE  README.md  baseline.py  client.py  context.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  start.sh  test_live.sh  validate-submission.sh
examples/: train_with_trl.py
incident_response_env/: __init__.py  models.py
incident_response_env/scenarios/: easy.json  expert.json  hard.json  medium.json
incident_response_env/server/: app.py  environment.py  grader.py  infrastructure.py
incident_response_env/services/: chaos_engine.py  fake_worker.py  real_metrics.py  setup_db.py
scenarios/: easy.json  hard.json  medium.json
server/: Dockerfile  __init__.py  app.py  environment.py  grader.py  infrastructure.py
tests/: test_api.py  test_environment.py
